--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "classnames": "^2.5.0",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "less": "^4.2.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-plugin-svg-icons": "^2.0.1"
