--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "antd": "^5.12.8",
     "autoprefixer": "^10.4.16",
     "classnames": "^2.5.0",
     "eslint": "^8.55.0",
