--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "i18next": "^23.11.3",
+    "i18next-browser-languagedetector": "^7.2.1",
+    "i18next-xhr-backend": "^3.2.2",
     "less": "^4.2.0",
     "postcss": "^8.4.32",
+    "react-i18next": "^14.1.1",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
