--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "antd": "^5.12.8",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.7.7",
     "classnames": "^2.5.0",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
