--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "i18next": "^23.11.3",
     "i18next-browser-languagedetector": "^7.2.1",
-    "i18next-xhr-backend": "^3.2.2",
+    "i18next-http-backend": "^3.0.1",
     "less": "^4.2.0",
     "postcss": "^8.4.32",
     "react-i18next": "^14.1.1",
